--- a/app/src/main/res/layout/fragment_intro_01.xml
+++ b/app/src/main/res/layout/fragment_intro_01.xml
@@ -3,12 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/intro_page"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <EditText
+    <TextView
         android:id="@+id/editTxt_01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="..."/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
+        android:text="123"
+        android:textColor="#eeeeee" />
+    <TextView
+        android:id="@+id/editTxt_02"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
+        android:layout_weight="2"
+        android:textColor="#eeeeee"
+        android:text="123"/>
 
 </LinearLayout>
