--- a/app/src/main/res/layout/fragment_intro_02.xml
+++ b/app/src/main/res/layout/fragment_intro_02.xml
@@ -2,33 +2,89 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <ScrollView
+    <TextView
+        android:id="@+id/manual_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
+        android:text="123"
+        android:layout_weight="3"
+        android:textColor="#ffffff"
+        android:layout_gravity="center"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:layout_marginLeft="80px"
+            android:orientation="vertical"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/manual"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textColor="@color/white"
-                android:layout_gravity="center"
-                android:text="123" />
-
+                android:id="@+id/manual_01"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:autoSizeTextType="uniform"
+                android:text="123"
+                android:layout_weight="1"
+                android:textColor="#ffffff"
+                android:layout_gravity="center"/>
             <TextView
-                android:id="@+id/editTxt_02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="80px"
-                android:textColor="@color/white"
-                android:text="456" />
+                android:id="@+id/manual_02"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:autoSizeTextType="uniform"
+                android:text="123"
+                android:layout_weight="1"
+                android:textColor="#ffffff"
+                android:layout_gravity="center"/>
+            <TextView
+                android:id="@+id/manual_03"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:autoSizeTextType="uniform"
+                android:text="123"
+                android:layout_weight="1"
+                android:textColor="#ffffff"
+                android:layout_gravity="center"/>
+            <TextView
+                android:id="@+id/manual_04"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:autoSizeTextType="uniform"
+                android:text="123"
+                android:layout_weight="1"
+                android:textColor="#ffffff"
+                android:layout_gravity="center"/>
+            <!--            <TextView-->
+            <!--                android:id="@+id/manual_05"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent"-->
+            <!--                android:autoSizeTextType="uniform"-->
+            <!--                android:text="123"-->
+            <!--                android:layout_weight="1"-->
+            <!--                android:textColor="#ffffff"-->
+            <!--                android:layout_gravity="center"/>-->
+
         </LinearLayout>
 
-    </ScrollView>
+
+    </LinearLayout>
+
+
+
 </LinearLayout>
